--- a/android/res/layout/dialog_about.xml
+++ b/android/res/layout/dialog_about.xml
@@ -2,11 +2,12 @@
 <ScrollView 
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent" 
-	android:layout_height="fill_parent">
+	android:layout_height="fill_parent"
+	android:fillViewport="true">
 	
 	<LinearLayout 
 		android:layout_width="fill_parent" 
-		android:layout_height="fill_parent"
+		android:layout_height="wrap_content"
 		android:orientation="vertical">
 		
 		<ImageView  
