--- a/android/res/values/changelog.xml
+++ b/android/res/values/changelog.xml
@@ -1,9 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 <string name="changes">
+Transdroid 1.1.3\n
+- View active (seeding or downloading) torrents\n
+- qBittorrent: view trackers and bugfix for removal\n
+- Transmission: get and display turtle mode status from server\n
+- Blink LED on notifications and allow setting of colour\n
+- Catch Shazam song sharing\n
+- Removed BTJunkie\n
+- Fix for setting download location\n
+- Fixed barcode scanner\n
+- Other minor bug and UI fixes\n
+\n
+Transdroid 1.1.2\n
+- UI bug fixes\n
+\n
+Transdroid 1.1.1\n
+- Critical Transmission 2.40+ bugfix\n
+\n
 Transdroid 1.1.0\n
 - Unified phone/tablet interface\n
-- Critical Transmission 2.40+ bugfix\n
 \n
 Transdroid 1.0.4\n
 - (Tracker) error reporting\n
