--- a/android/res/values/changelog.xml
+++ b/android/res/values/changelog.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 <string name="changes">
+Transdroid 1.1.4\n
+- App and search module update checker\n
+- Support for Seedstuff seedboxes\n
+- Improve Xirvik shared server support\n
+\n
 Transdroid 1.1.3\n
 - View active (seeding or downloading) torrents\n
 - qBittorrent: view trackers and bugfix for removal\n
