Support AndFTP alias:// construct and don't send the username/passwor din that case (issue 388). Work around the AndFTP bug that the leading / in a file path without further directories (so with the file in the FTP root) caused AndFTP not to find the file.

--- a/android/res/values/changelog.xml
+++ b/android/res/values/changelog.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 <string name="changes">
+Transdroid 1.1.5\n
+- AndFTP alias:// support and file-in-root fix\n
+\n
 Transdroid 1.1.4\n
 - App and search module update checker\n
 - Support for Seedstuff seedboxes\n
