Added date added and explicit date done support for uTorrent (issue 370) and date added support for Deluge and date doen support for Transmission.

--- a/android/res/layout-xlarge-v11/part_details_header.xml
+++ b/android/res/layout-xlarge-v11/part_details_header.xml
@@ -12,6 +12,10 @@
 		android:shrinkColumns="1"
 		android:stretchColumns="1">
 		<TextView android:id="@+id/details_name" style="@style/DetailsInfoText" />
+		<TableRow android:id="@+id/detailsrow_dateadded">
+			<TextView android:text="@string/details_dateadded" style="@style/DetailsType" />
+			<TextView android:id="@+id/details_dateadded" style="@style/DetailsInfoText" />
+		</TableRow>
 		<TableRow>
 			<TextView android:text="@string/details_size" style="@style/DetailsType" />
 			<TextView android:id="@+id/details_size" style="@style/DetailsInfoText" />
