--- a/android/res/layout/part_details_header.xml
+++ b/android/res/layout/part_details_header.xml
@@ -11,6 +11,10 @@
 		android:layout_margin="5dip"
 		android:shrinkColumns="1"
 		android:stretchColumns="1">
+		<TableRow android:id="@+id/detailsrow_dateadded">
+			<TextView android:text="@string/details_dateadded" style="@style/DetailsType" />
+			<TextView android:id="@+id/details_dateadded" style="@style/DetailsInfoText" />
+		</TableRow>
 		<TableRow>
 			<TextView android:text="@string/details_size" style="@style/DetailsType" />
 			<TextView android:id="@+id/details_size" style="@style/DetailsInfoText" />
