--- a/android/res/values/changelog.xml
+++ b/android/res/values/changelog.xml
@@ -4,11 +4,13 @@
 Transdroid 1.1.8\n
 - Improved BitComet support, by Sergey\n
 - Fix for non-English KTorrent\n
+- Report Deluge tracker errors\n
+- Sort by date added with uTorrent\n
 \n
 Transdroid 1.1.7\n
 - Transmission and qBittorrent bugfixes\n
 \n
-	Transdroid 1.1.6\n
+Transdroid 1.1.6\n
 - Added BitComet support, by Sergey (SeNS)\n
 - Improved label support, by Alexey Rogovoy\n
 - Added GZipped content support in RSS feeds\n
