--- a/android/res/values/changelog.xml
+++ b/android/res/values/changelog.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 <string name="changes">
+Transdroid 1.1.9\n
+- Added Bitsnoop to search sites\n
+\n
 Transdroid 1.1.8\n
 - Improved BitComet support, by Sergey\n
 - Fix for non-English KTorrent\n
