--- a/lite/res/layout-w600dp/activity_torrents.xml
+++ b/lite/res/layout-w600dp/activity_torrents.xml
@@ -12,13 +12,16 @@
 		android:id="@+id/filters_list"
 		android:layout_width="0dip"
 		android:layout_height="match_parent"
-		android:layout_weight="1" />
+		android:layout_weight="1"
+		android:choiceMode="singleChoice"
+		android:listSelector="@drawable/selectable_background_transdroid" />
 	
 	<fragment
 		android:id="@+id/torrent_list"
 		android:layout_width="0dip"
 		android:layout_height="match_parent"
 		android:layout_weight="3"
-		class="org.transdroid.gui.TorrentsFragment" />
+		class="org.transdroid.gui.TorrentsFragment"
+		tools:layout="@layout/fragment_torrents" />
 
 </LinearLayout>
