--- a/lite/res/layout/fragment_filters.xml
+++ b/lite/res/layout/fragment_filters.xml
@@ -3,9 +3,11 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent" >
 
-	<ListView
+	<com.actionbarsherlock.view.ListView
 		android:id="@+id/filters_list"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent" />
+		android:layout_height="match_parent"
+		android:choiceMode="singleChoice"
+		android:listSelector="@drawable/selectable_background_transdroid" />
 
 </FrameLayout>
