--- a/lite/res/layout/fragment_torrents.xml
+++ b/lite/res/layout/fragment_torrents.xml
@@ -3,9 +3,23 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent" >
 
-	<ListView
+	<com.actionbarsherlock.view.SherlockListView
 		android:id="@+id/torrent_list"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent" />
+		android:layout_height="match_parent"
+		android:choiceMode="multipleChoiceModal"
+		android:listSelector="@drawable/selectable_background_transdroid"
+		android:visibility="gone" />
 
+	<TextView
+		android:id="@+id/empty_text"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center"
+		android:drawableTop="@drawable/ic_empty_details"
+		android:drawablePadding="8dip"
+		android:text="@string/navigation_emptytorrents"
+		android:textIsSelectable="false"
+		android:visibility="gone" />
+	
 </FrameLayout>
