--- a/lite/res/layout/activity_torrents.xml
+++ b/lite/res/layout/activity_torrents.xml
@@ -10,6 +10,7 @@
 		android:id="@+id/torrent_list"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		class="org.transdroid.gui.TorrentsFragment" tools:layout="@layout/fragment_torrents"/>
+		class="org.transdroid.core.gui.TorrentsFragment_"
+		tools:layout="@layout/fragment_torrents" />
 
 </FrameLayout>
