--- a/lite/res/layout/fragment_details_header.xml
+++ b/lite/res/layout/fragment_details_header.xml
@@ -9,9 +9,9 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_alignParentRight="true"
-		android:text="UNLABELED"
 		android:textIsSelectable="true"
-		style="@style/LabelTextView" />
+		style="@style/LabelTextView"
+		android:visibility="invisible" />
 	
 	<TextView
 		android:id="@+id/dateadded_text"
@@ -19,7 +19,6 @@
 		android:layout_height="wrap_content"
 		android:layout_toLeftOf="@id/label_text"
 		android:layout_marginRight="@dimen/margin_half"
-		android:text="SINCE 07:50, 28 FEBRUARY"
 		android:textIsSelectable="false" />
 	
 	<View
@@ -40,20 +39,18 @@
 		android:layout_toRightOf="@id/separator"
 		android:layout_marginTop="@dimen/margin_half"
 		android:layout_marginLeft="@dimen/margin_half"
-		android:text="16.6"
 		android:textColor="#fff"
 		android:textSize="33sp"
 		android:fontFamily="sans-serif-light"
 		android:textIsSelectable="false" />
 	
 	<TextView
-		android:id="@+id/uploaded_unit"
+		android:id="@+id/uploadedunit_text"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_alignBaseline="@id/uploaded_text"
 		android:layout_toRightOf="@id/uploaded_text"
 		android:layout_marginLeft="4dip"
-		android:text="GB"
 		android:textColor="#fff"
 		android:fontFamily="sans-serif-light"
 		android:textIsSelectable="false" />
@@ -65,7 +62,6 @@
 		android:layout_below="@id/uploaded_text"
 		android:layout_toRightOf="@id/separator"
 		android:layout_marginLeft="@dimen/margin_half"
-		android:text="RATIO 18.7"
 		android:textSize="12sp"
 		android:textIsSelectable="false" />
 	
@@ -77,7 +73,6 @@
 		android:layout_toRightOf="@id/separator"
 		android:layout_marginLeft="@dimen/margin_half"
 		android:layout_marginBottom="4dip"
-		android:text="↑1.4MB/s"
 		android:textSize="22sp"
 		android:textColor="#fff"
 		android:fontFamily="sans-serif-light"
@@ -90,18 +85,16 @@
 		android:layout_below="@id/upspeed_text"
 		android:layout_toRightOf="@id/separator"
 		android:layout_marginLeft="@dimen/margin_half"
-		android:text="56 (1208) SEEDERS"
 		android:textSize="12sp"
 		android:textIsSelectable="false" />
 	
 	<TextView
-		android:id="@+id/downloaded_unit"
+		android:id="@+id/downloadedunit_text"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_alignBaseline="@id/uploaded_unit"
+		android:layout_alignBaseline="@id/uploadedunit_text"
 		android:layout_toLeftOf="@id/separator"
 		android:layout_marginRight="@dimen/margin_half"
-		android:text="MB"
 		android:textColor="#fff"
 		android:fontFamily="sans-serif-light"
 		android:textIsSelectable="false" />
@@ -110,10 +103,9 @@
 		android:id="@+id/downloaded_text"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_alignBaseline="@id/uploaded_unit"
-		android:layout_toLeftOf="@id/downloaded_unit"
+		android:layout_alignBaseline="@id/uploadedunit_text"
+		android:layout_toLeftOf="@id/downloadedunit_text"
 		android:layout_marginRight="4dip"
-		android:text="325.6"
 		android:textColor="#fff"
 		android:textSize="33sp"
 		android:fontFamily="sans-serif-light"
@@ -126,7 +118,6 @@
 		android:layout_alignBaseline="@id/ratio_text"
 		android:layout_toLeftOf="@id/separator"
 		android:layout_marginRight="@dimen/margin_half"
-		android:text="/ 388.8MB"
 		android:textSize="12sp"
 		android:textIsSelectable="false" />
 	
@@ -137,7 +128,6 @@
 		android:layout_alignBaseline="@id/upspeed_text"
 		android:layout_toLeftOf="@id/separator"
 		android:layout_marginRight="@dimen/margin_half"
-		android:text="400.8KB/s↓"
 		android:textSize="22sp"
 		android:textColor="#fff"
 		android:fontFamily="sans-serif-light"
@@ -150,7 +140,6 @@
 		android:layout_alignBaseline="@id/seeders_text"
 		android:layout_toLeftOf="@id/separator"
 		android:layout_marginRight="@dimen/margin_half"
-		android:text="128 (128) LEECHERS"
 		android:textSize="12sp"
 		android:textIsSelectable="false" />
 	
@@ -160,7 +149,6 @@
 		android:layout_height="wrap_content"
 		android:layout_below="@id/separator"
 		android:layout_marginBottom="@dimen/margin_half"
-		android:text="DOWNLADING (80%): ETA 38 SECONDS"
 		android:textIsSelectable="false" />
 	
 </RelativeLayout>
