--- a/lite/res/layout/list_item_torrent.xml
+++ b/lite/res/layout/list_item_torrent.xml
@@ -4,10 +4,9 @@
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content" 
 	android:orientation="vertical" 
-	android:layout_marginTop="@dimen/margin_half"
-	android:layout_marginBottom="@dimen/margin_half"
-	android:layout_marginLeft="@dimen/margin_half"
-	android:layout_marginRight="@dimen/margin_default">
+	android:paddingTop="@dimen/margin_half"
+	android:paddingBottom="@dimen/margin_half"
+	android:paddingRight="@dimen/margin_default">
 	
 	<ImageView
 		android:id="@+id/priority_image"
@@ -16,13 +15,16 @@
 		android:layout_marginLeft="@dimen/margin_half"
 		android:layout_marginTop="@dimen/margin_half"
 		android:src="@drawable/ic_priority_normal"
-		android:contentDescription="@string/status_priority_normal" />
+		android:contentDescription="@string/status_priority_normal"
+		android:focusable="false" />
 		
 	<fr.marvinlabs.widget.InertCheckBox
 		android:id="@+id/torrent_checkbox"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_below="@id/priority_image" />
+		android:layout_below="@id/priority_image"
+		android:layout_marginRight="4dip"
+		android:focusable="false" />
 	
 	<TextView
 		android:id="@+id/name_text"
@@ -31,7 +33,8 @@
 		android:layout_toRightOf="@id/torrent_checkbox"
 		android:textColor="#fff"
 		android:textSize="15sp"
-		android:textIsSelectable="true" />
+		android:textIsSelectable="false"
+		android:focusable="false" />
 		
 	<TextView
 		android:id="@+id/ratio_text"
@@ -42,7 +45,8 @@
 		android:layout_marginLeft="@dimen/margin_half"
 		android:layout_marginTop="4dip"
 		android:textSize="12sp"
-		android:textIsSelectable="false" />
+		android:textIsSelectable="false"
+		android:focusable="false" />
 	
 	<TextView
 		android:id="@+id/progress_text"
@@ -52,7 +56,8 @@
 		android:layout_toLeftOf="@id/ratio_text"
 		android:layout_toRightOf="@id/torrent_checkbox"
 		android:textSize="12sp"
-		android:textIsSelectable="false" />
+		android:textIsSelectable="false"
+		android:focusable="false" />
 		
 	<org.transdroid.core.gui.lists.TorrentProgressBar 
 		android:id="@+id/torrent_progressbar" 
@@ -61,7 +66,8 @@
 		android:layout_toRightOf="@id/torrent_checkbox"
 		android:layout_below="@id/ratio_text"
 		android:layout_marginTop="@dimen/margin_half"
-		android:layout_marginBottom="@dimen/margin_half" />
+		android:layout_marginBottom="@dimen/margin_half"
+		android:focusable="false" />
 		
 	<TextView
 		android:id="@+id/speed_text"
@@ -71,7 +77,8 @@
 		android:layout_alignParentRight="true"
 		android:layout_marginLeft="@dimen/margin_half"
 		android:textSize="12sp"
-		android:textIsSelectable="false" />
+		android:textIsSelectable="false"
+		android:focusable="false" />
 	
 	<TextView
 		android:id="@+id/peers_text"
