--- a/lite/res/layout/fragment_torrents.xml
+++ b/lite/res/layout/fragment_torrents.xml
@@ -23,4 +23,16 @@
 		android:textIsSelectable="false"
 		android:visibility="gone" />
 	
+	<TextView
+		android:id="@+id/nosettings_text"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center"
+		android:drawableTop="@drawable/ic_empty_details"
+		android:drawablePadding="8dip"
+		android:text="@string/navigation_nosettings"
+		android:gravity="center"
+		android:textIsSelectable="false"
+		android:visibility="gone" />
+	
 </FrameLayout>
