--- a/lite/res/xml/pref_system.xml
+++ b/lite/res/xml/pref_system.xml
@@ -2,19 +2,27 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 	
 	<CheckBoxPreference
-		android:key="about_checkupdates"
+		android:key="system_checkupdates"
 		android:title="@string/pref_checkupdates"
 		android:summary="@string/pref_checkupdates_info"
 		android:defaultValue="true" />
 	
 	<Preference
-		android:key="about_sendlog"
+		android:key="system_sendlog"
 		android:title="@string/pref_sendlog"
 		android:summary="@string/pref_sendlog_info">
 	</Preference>
 
 	<Preference
-		android:key="about_about"
+		android:key="system_installhelp"
+		android:title="@string/pref_installhelp" />
+	
+	<Preference
+		android:key="system_changelog"
+		android:title="@string/pref_changelog" />
+	
+	<Preference
+		android:key="system_about"
 		android:title="@string/pref_about" />
 
 </PreferenceScreen>
