Fixing the details fragment to show and with a proper layout of headers.\nStarting task execution.

--- a/lite/res/menu/fragment_details.xml
+++ b/lite/res/menu/fragment_details.xml
@@ -37,7 +37,7 @@
 		android:title="@string/action_setlabel" />
 	<item
 		android:id="@+id/action_updatetrackers"
-		android:showAsAction="never"
+		android:showAsAction="ifRoom"
 		android:title="@string/action_updatetrackers" />
 
 </menu>
