--- a/lite/res/layout/list_item_filter.xml
+++ b/lite/res/layout/list_item_filter.xml
@@ -2,8 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:paddingTop="@dimen/margin_half"
-	android:paddingBottom="@dimen/margin_half"
+	android:paddingTop="4dip"
+	android:paddingBottom="4dip"
 	android:paddingLeft="@dimen/margin_default"
 	android:paddingRight="@dimen/margin_default" >
 
