--- a/lite/res/xml/pref_system.xml
+++ b/lite/res/xml/pref_system.xml
@@ -10,8 +10,7 @@
 	<Preference
 		android:key="system_sendlog"
 		android:title="@string/pref_sendlog"
-		android:summary="@string/pref_sendlog_info">
-	</Preference>
+		android:summary="@string/pref_sendlog_info" />
 
 	<Preference
 		android:key="system_installhelp"
