--- a/lite/res/layout/fragment_torrents.xml
+++ b/lite/res/layout/fragment_torrents.xml
@@ -11,6 +11,13 @@
 		android:listSelector="@drawable/selectable_background_transdroid"
 		android:visibility="gone" />
 
+	<ProgressBar
+		android:id="@+id/loading_progress"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center"
+		android:indeterminateDrawable="@drawable/loading_progress" />
+	
 	<TextView
 		android:id="@+id/empty_text"
 		android:layout_width="wrap_content"
