--- a/core/res/layout-w600dp/activity_torrents.xml
+++ b/core/res/layout-w600dp/activity_torrents.xml
@@ -8,7 +8,7 @@
 	android:baselineAligned="false"
 	tools:context=".TorrentsActivity" >
 
-	<ListView
+	<com.actionbarsherlock.view.SherlockListView
 		android:id="@+id/filters_list"
 		android:layout_width="0dip"
 		android:layout_height="match_parent"
