--- a/core/res/layout/fragment_details.xml
+++ b/core/res/layout/fragment_details.xml
@@ -13,6 +13,14 @@
 		android:dividerHeight="0dip"
 		android:visibility="gone" />
 
+	<ProgressBar
+		android:id="@+id/loading_progress"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center"
+		android:indeterminateDrawable="@drawable/loading_progress"
+		android:visibility="gone" />
+	
 	<TextView
 		android:id="@+id/empty_text"
 		android:layout_width="wrap_content"
