--- a/core/res/layout/fragment_torrents.xml
+++ b/core/res/layout/fragment_torrents.xml
@@ -16,7 +16,8 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="center"
-		android:indeterminateDrawable="@drawable/loading_progress" />
+		android:indeterminateDrawable="@drawable/loading_progress"
+		android:visibility="visible" />
 	
 	<TextView
 		android:id="@+id/empty_text"
