--- a/core/res/layout/fragment_torrents.xml
+++ b/core/res/layout/fragment_torrents.xml
@@ -16,31 +16,35 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="center"
+		android:indeterminate="true"
+		android:indeterminateOnly="true"
 		android:indeterminateDrawable="@drawable/loading_progress"
 		android:visibility="visible" />
-	
+
 	<TextView
 		android:id="@+id/empty_text"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="center"
-		android:drawableTop="@drawable/ic_empty_details"
 		android:drawablePadding="8dip"
-		android:text="@string/navigation_emptytorrents"
+		android:drawableTop="@drawable/ic_empty_details"
 		android:gravity="center"
+		android:maxWidth="400dip"
+		android:text="@string/navigation_emptytorrents"
 		android:textIsSelectable="false"
 		android:visibility="gone" />
-	
+
 	<TextView
 		android:id="@+id/nosettings_text"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="center"
-		android:drawableTop="@drawable/ic_empty_details"
 		android:drawablePadding="8dip"
-		android:text="@string/navigation_nosettings"
+		android:drawableTop="@drawable/ic_empty_details"
 		android:gravity="center"
+		android:maxWidth="400dip"
+		android:text="@string/navigation_nosettings"
 		android:textIsSelectable="false"
 		android:visibility="gone" />
-	
+
 </FrameLayout>
