--- a/core/res/layout/dialog_about.xml
+++ b/core/res/layout/dialog_about.xml
@@ -32,7 +32,7 @@
 		android:layout_marginTop="@dimen/margin_default"
 		android:fontFamily="sans-serif-condensed"
 		android:gravity="center"
-		android:text="@string/app_developer"
+		android:text="@string/system_developer"
 		android:textColor="@android:color/white"
 		android:textSize="18sp" />
 
@@ -43,6 +43,6 @@
 		android:layout_marginBottom="@dimen/margin_default"
 		android:layout_marginTop="4dip"
 		android:gravity="center"
-		android:text="@string/app_license" />
+		android:text="@string/system_license" />
 
 </LinearLayout>
