--- a/core/res/menu/activity_torrents.xml
+++ b/core/res/menu/activity_torrents.xml
@@ -15,7 +15,7 @@
 		android:id="@+id/action_search"
 		android:icon="@drawable/ic_action_search"
 		android:showAsAction="always"
-		android:title="@string/action_settings"/>
+		android:title="@string/action_search"/>
 	<item
 		android:id="@+id/action_rss"
 		android:icon="@drawable/ic_action_rss"
