--- a/core/res/xml/pref_system.xml
+++ b/core/res/xml/pref_system.xml
@@ -17,6 +17,14 @@
 		android:title="@string/pref_installhelp" />
 	
 	<Preference
+		android:key="system_importsettings"
+		android:title="@string/pref_import" />
+	
+	<Preference
+		android:key="system_exportsettings"
+		android:title="@string/pref_export" />
+	
+	<Preference
 		android:key="system_changelog"
 		android:title="@string/pref_changelog" />
 	
