--- a/core/res/menu/activity_deleteableprefs.xml
+++ b/core/res/menu/activity_deleteableprefs.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
 	<item
-		android:id="@+id/action_remove"
+		android:id="@+id/action_removesettings"
 		android:icon="@drawable/ic_action_discard"
 		android:showAsAction="always"
 		android:title="@string/action_removesettings"/>
