--- a/core/res/layout/list_item_filter.xml
+++ b/core/res/layout/list_item_filter.xml
@@ -2,15 +2,16 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:paddingTop="4dip"
-	android:paddingBottom="4dip"
+	android:paddingBottom="@dimen/margin_half"
 	android:paddingLeft="@dimen/margin_default"
-	android:paddingRight="@dimen/margin_default" >
+	android:paddingRight="@dimen/margin_default"
+	android:paddingTop="@dimen/margin_half" >
 
 	<TextView
 		android:id="@+id/item_text"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+		android:textSize="17sp"
 		android:textIsSelectable="true" />
 
 </FrameLayout>
