--- a/core/res/layout/list_item_navigation.xml
+++ b/core/res/layout/list_item_navigation.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="wrap_content"
 	android:layout_height="match_parent"
-	android:paddingTop="4dip"
-	android:paddingBottom="4dip"
+	android:orientation="vertical"
 	android:paddingLeft="@dimen/margin_default"
 	android:paddingRight="@dimen/margin_default" >
 
@@ -11,12 +10,17 @@
 		android:id="@+id/filter_text"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:textIsSelectable="false" />
+		android:textColor="@android:color/primary_text_dark"
+		android:textIsSelectable="false"
+		android:textSize="17sp" />
 
 	<TextView
 		android:id="@+id/server_text"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:textIsSelectable="false" />
-	
+		android:layout_marginTop="-4dip"
+		android:textColor="@android:color/primary_text_dark"
+		android:textIsSelectable="false"
+		android:textSize="13sp" />
+
 </LinearLayout>
