--- a/core/res/menu/activity_torrents.xml
+++ b/core/res/menu/activity_torrents.xml
@@ -3,7 +3,7 @@
 	<item
 		android:id="@+id/action_add"
 		android:icon="@drawable/ic_action_new"
-		android:showAsAction="always"
+		android:showAsAction="ifRoom"
 		android:title="@string/action_add">
 		<menu>
 			<item android:id="@+id/action_add_fromurl" android:title="@string/action_addfromurl" />
@@ -14,7 +14,7 @@
 	<item
 		android:id="@+id/action_search"
 		android:icon="@drawable/ic_action_search"
-		android:showAsAction="always"
+		android:showAsAction="ifRoom"
 		android:title="@string/action_search"/>
 	<item
 		android:id="@+id/action_rss"
