Showing labels in the navigation list or spinner.

--- a/core/res/layout/list_item_filter.xml
+++ b/core/res/layout/list_item_filter.xml
@@ -12,6 +12,6 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:textSize="17sp"
-		android:textIsSelectable="true" />
+		android:textIsSelectable="false" />
 
 </FrameLayout>
