--- a/core/res/layout/fragment_details.xml
+++ b/core/res/layout/fragment_details.xml
@@ -15,10 +15,12 @@
 
 	<ProgressBar
 		android:id="@+id/loading_progress"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
+		android:layout_width="128dp"
+		android:layout_height="128dp"
 		android:layout_gravity="center"
+		android:indeterminate="true"
 		android:indeterminateDrawable="@drawable/loading_progress"
+		android:indeterminateOnly="true"
 		android:visibility="gone" />
 
 	<TextView
