Trial with more compact torrent list layout and colour-based status indicator.

--- a/core/res/values/dimens.xml
+++ b/core/res/values/dimens.xml
@@ -2,5 +2,6 @@
 
 	<dimen name="margin_default">16dp</dimen>
 	<dimen name="margin_half">8dp</dimen>
+	<dimen name="margin_torrentlistleft">16dp</dimen>
 
 </resources>
