Fixed torrent list sorting.

--- a/core/res/layout/fragment_torrents.xml
+++ b/core/res/layout/fragment_torrents.xml
@@ -17,7 +17,7 @@
 		android:layout_height="128dp"
 		android:layout_gravity="center"
 		android:indeterminate="true"
-		android:indeterminateDrawable="@drawable/loading_progress_dark"
+		android:indeterminateDrawable="?attr/loading_progress"
 		android:indeterminateOnly="true"
 		android:visibility="visible" />
 
