--- a/core/res/layout/list_item_simple.xml
+++ b/core/res/layout/list_item_simple.xml
@@ -12,6 +12,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:textSize="15sp"
-		android:textIsSelectable="false" />
+		android:textIsSelectable="false"
+		android:autoLink="web" />
 
 </FrameLayout>
